--- a/app/assets/sass/components/_panels.scss
+++ b/app/assets/sass/components/_panels.scss
@@ -35,6 +35,7 @@ h2.govuk-heading-s {
   background: govuk-colour("red");
   text-align: left;
   padding: 10px;
+  clear: both;
 
   .govuk-panel__body, h2 {
     color: white;
